# gdx-effekseer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  dll.cpp  local.properties  settings.gradle
.run/: Build Android Shared Libraries.run.xml  Install Android.run.xml  Install Core.run.xml  Install Desktop.run.xml  Install.run.xml  Replace Size In dll.cpp.run.xml
cpp/: Build-android.bat  Build-android.sh  CMakeLists.txt  dll.cpp  utiil.h
cpp/jni/: Android.mk  Application_arm64-v8a.mk  Application_armeabi-v7a.mk  Application_x86.mk  Application_x86_64.mk  CMakeLists.txt
cpp/lib/: CMakeLists.txt  EffekseerBackendCore.cpp  EffekseerBackendCore.h  EffekseerEffectCore.cpp  EffekseerEffectCore.h  EffekseerManagerCore.cpp  EffekseerManagerCore.h  EffekseerSettingCore.cpp  EffekseerSettingCore.h  RefWrappers.cpp  RefWrappers.h  Vector4Map.cpp  Vector4Map.h  distortion.cpp  distortion.h  distotion.cpp  distotion.h  effekseernode.cpp  effekseernode.h
gdx-effekseer-android/: build.gradle
gdx-effekseer-desktop/: build.gradle
jni/: char16.i  effekseer_base.i  effekseer_effect.i  effekseer_effect_nodes.i  effekseer_force_fields.i  effekseer_math.i  effekseer_noise.i  effekseer_parameters.i  extensions.i  ibyte.i  st.i
path/debug/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
path/debug/arm64-v8a/cpp/: cmake_install.cmake
path/debug/arm64-v8a/cpp/Effekseer/: cmake_install.cmake
path/debug/arm64-v8a/cpp/Effekseer/Dev/: cmake_install.cmake
path/debug/arm64-v8a/cpp/Effekseer/Dev/Cpp/: cmake_install.cmake
path/debug/arm64-v8a/cpp/Effekseer/Dev/Cpp/Effekseer/: cmake_install.cmake
path/debug/arm64-v8a/cpp/Effekseer/Dev/Cpp/EffekseerRendererGL/: cmake_install.cmake
path/debug/arm64-v8a/cpp/Effekseer/Dev/Cpp/EffekseerSoundAL/: cmake_install.cmake
path/debug/arm64-v8a/cpp/lib/: cmake_install.cmake
src/main/java/io/github/srjohnathan/core/: CameraView.java  EffekseerBackendCore.java  EffekseerCore.java  EffekseerCoreDeviceType.java  EffekseerEffectCore.java  EffekseerManager.java  EffekseerManagerCore.java  EffekseerTextureType.java  GDX.java  GDXJNI.java  OnAnimationComplete.java  ParticleEffekseer.java  VectorFloat.java
src/main/java/org/johnathan/gdx/effekseer/: CameraView.java  EffekseerBackendCore.java  EffekseerCore.java  EffekseerCoreDeviceType.java  EffekseerEffectCore.java  EffekseerManager.java  EffekseerManagerCore.java  EffekseerTextureType.java  GDX.java  GDXJNI.java  OnAnimationComplete.java  ParticleEffekseer.java  VectorFloat.java
(+232 files in other folders)
